--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
 
         // the link to your model provided by Teachable Machine export panel
-        const URL = "./https://teachablemachine.withgoogle.com/models/Ve9M2Sado";
+        const URL = "https://teachablemachine.withgoogle.com/models/Ve9M2Sado/";
         
 
         let model, webcam, labelContainer, maxPredictions, conclusion, otherModel, personContainer, model2;
