--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
             for (let i = 0; i < maxPredictions; i++) {
               if(prediction[i].probability > 0.85){
-                if(predictiction[i] != mostRecentWord){
+                if(prediction[i] != mostRecentWord){
                   mostRecentWord = prediction[i].className;
                   sentence = sentence + prediction[i].className;
                 }
